--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -794,7 +794,8 @@
                        <div id="workItems">
                             <div class="work-input-group mb-3">
                                 <div class="d-flex align-items-center gap-2 w-100">
-                                    <input type="text" class="form-control" id="work_id_0" name="work_ids[]" list="workOptions" placeholder="Выберите работу">
+                                    <div class="d-flex align-items-center gap-2 w-100" style="position: relative;">
+                                        <input type="text" class="form-control" id="work_id_0" name="work_ids[]" list="workOptions" placeholder="Выберите работу">
                                     <select class="form-select work-employee-select" name="work_employees[]" required>
                                         <option value="">Выберите сотрудника</option>
                                         {% for person in persons %}
@@ -805,6 +806,7 @@
                                     <button type="button" class="btn btn-danger remove-work-btn">
                                         <i class="fas fa-times"></i>
                                     </button>
+                                    </div>
                                 </div>
                             </div>
                        </div>
@@ -925,7 +927,7 @@
             <div class="d-flex align-items-center gap-2 w-100">
                 <div class="d-flex align-items-center gap-2 w-100" style="position: relative;">
                     <input type="text" class="form-control edit-work-id" list="workOptions" placeholder="Выберите работу">
-                </div>
+               
                 <select class="form-select edit-work-employee" required>
                     <option value="">Выберите сотрудника</option>
                     {% for person in persons %}
@@ -936,6 +938,7 @@
                 <button type="button" class="btn btn-danger remove-work-btn">
                     <i class="fas fa-times"></i>
                 </button>
+                </div>
             </div>
         </div>
     </template>
