--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -845,7 +845,7 @@
                         <div class="col-md-6">
                             <label for="edit_car_id" class="form-label">Машина</label>
                              <div style="position: relative;">
-                                    <input type="text" id="carSearch" class="form-control" placeholder="Выберите машину">
+                                    <input type="text" id="edit_car_id" class="form-control" placeholder="Выберите машину">
                                     <div id="carList" class="suggestions-box"></div>
                              </div>
                         </div>
